--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ li {
     margin: 0 10px;
     font-size: 20px; 
 }
-li:nth-of-type(1) {
+.nav li:nth-of-type(1) {
     text-decoration: underline;
 }
 li a {
