--- a/styles.css
+++ b/styles.css
@@ -36,9 +36,9 @@ li {
     margin: 0 10px;
     font-size: 20px; 
 }
-.nav li:nth-of-type(1) {
+/* .nav li:nth-of-type(1) {
     text-decoration: underline #F47E01;
-}
+} */
 li a {
     text-decoration: none;
     color: black;
