--- a/galeria_styles.css
+++ b/galeria_styles.css
@@ -1,58 +1,67 @@
 .galeria_container {
     display: grid;
     height: 100vh;
-    grid-template: repeat(5,1fr) / repeat(5,1fr);
+    grid-template: repeat(3,1fr) / repeat(5,1fr);
     padding: 100px;
+    grid-gap: 20px;
 }
 
 
 .galerias {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     display: grid;
     grid-template: repeat(3,1fr) / repeat(3,1fr);
     grid-template-areas: 
                         "a a b"
                         "a a c"
                         "a a d";
+    border-radius: 0 0 16px 16px;
     
 }
 
+.images_containers {
+    display: flex;
+}
+
+.galeria_imgs {
+    border: 0;
+    width: 100%;
+    object-fit: cover;
+    height: 100%;
+}
+
 .galeria1 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-column: 1 / 3;
 }
 
 .galeria2 {
-    grid-column-start: 4;
-    grid-column-end: 6;
-    grid-row-start: 1;
-    grid-row-end: 3;
+    grid-column: 4 / 6;
 }
 
 .galeria3 {
-    grid-column-start: 1;
-    grid-column-end: 3;
-    grid-row-start: 4;
-    grid-row-end: 6;
+    grid-column: 1 / 3;
+    grid-row: 3 / 4;
 }
 
 .galeria4 {
-    grid-column-start: 4;
-    grid-column-end: 6;
-    grid-row-start: 4;
-    grid-row-end: 6;
+    grid-column: 4 / 6;
+    grid-row: 3 / 4;
 }
 
 .galerias div {
     border: 1px solid black;
     background-color: brown;
 }
-.galerias img {
-    /* width: 200px; */
-    object-fit: cover;
+
+.galerias p {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-bottom: 0;
+    font-size: 30px;
+    grid-column: 1 / span3;
 }
+
 .img1 {
     grid-area: a;
 }
@@ -66,3 +75,6 @@
     grid-area: d;
 }
 
+.footer {
+    margin-top: 50px;
+}
