--- a/galeria_styles.css
+++ b/galeria_styles.css
@@ -78,3 +78,65 @@
 .footer {
     margin-top: 50px;
 }
+
+.pop_galery {
+    display: none;
+}
+
+.pop_galery:target {
+    display: block;
+    align-items: center;
+    position: fixed;
+    background: rgba(0, 0, 0, .8);
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+}
+
+.pop_image {
+    width: 100%;
+    height: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 25vh;
+}
+
+.pop_image a {
+    color: #ffffff;
+    font-size: 40px;
+    text-decoration: none;
+    margin: 0 10px;
+}
+
+.pop_image a:nth-child(2) {
+    margin: 0;
+    height: 100%;
+    flex-shrink: 2;
+}
+
+.pop_image img {
+    /* width: 500px; */
+    /* height: 100%; */
+    max-width: 100%;
+    max-height: 100%;
+    border: 7px solid #fff;
+    box-sizing: border-box;
+}
+
+.cerrar {
+    display: block;
+    background: #fff;
+    width: 25px;
+    height: 25px;
+    margin: auto;
+    text-align: center;
+    text-decoration: none;
+    font-size: 25px;
+    color: #000;
+    padding: 5px;
+    border-radius: 50%;
+    line-height: 25px;
+}
