--- a/galeria_styles.css
+++ b/galeria_styles.css
@@ -16,6 +16,7 @@
                         "a a c"
                         "a a d";
     border-radius: 0 0 16px 16px;
+    box-shadow: 0px 0px 33px 1px rgba(0,0,0,0.69);
     
 }
 
