--- a/us_styles.css
+++ b/us_styles.css
@@ -11,9 +11,11 @@
     width: 200px;
     grid-column-start: 2;
     grid-column-end: 3;
+    box-shadow: 0px 0px 33px 1px rgba(0,0,0,0.69);
 }
 .picture_container img {
     width: 200px;
+    
 }
 
 .founder_data {
