--- a/galeria_styles.css
+++ b/galeria_styles.css
@@ -58,7 +58,7 @@
     display: flex;
     justify-content: center;
     margin-top: 10px;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     font-size: 30px;
     grid-column: 1 / span3;
 }
