--- a/contact_styles.css
+++ b/contact_styles.css
@@ -43,8 +43,8 @@
 }
 
 .info_icons_container:nth-child(2) {
-    border-left: 1px solid black;
-    border-right: 1px solid black;
+    border-left: 1px solid rgba( 0, 0, 0, 0.2);
+    border-right: 1px solid rgba( 0, 0, 0, 0.2);
 }
 
 .info_title {
