--- a/galeria_styles.css
+++ b/galeria_styles.css
@@ -61,6 +61,7 @@
     margin-bottom: 10px;
     font-size: 30px;
     grid-column: 1 / span3;
+    font-family: 'Fredoka One', cursive;
 }
 
 .img1 {
