--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,10 @@ header {
     width: 25%;
 }
 
+.nav_btn_container {
+    display: none;
+}
+
 .nav_container {
     border: 1px solid black;
     margin: 0 15px;
@@ -71,7 +75,8 @@ li a {
     height: 550px;
     margin-top: 10px;
 }
-.image_container img{
+.image_container img {
+    width: 100%;
     object-fit: cover;
     box-shadow: 0px 0px 33px 1px rgba(0,0,0,0.69);
 }
@@ -232,4 +237,92 @@ li a {
 
 .form-group {
     margin-bottom: 10px;
+}
+
+
+/* MEDIA QUERIES */
+
+@media screen and (max-width: 1024px) {
+    .image_container img {
+        width: 100%;
+    }
+
+    .contain {
+        grid-template: 1fr 1fr / 1fr 1fr 1fr;
+    }
+
+    .menu {
+        grid-column-start: 1;
+    }
+
+    .contact2 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .contact2 img {
+        width: 8%;
+    }
+
+    .contact2 p {
+        font-size: 30px;
+    }
+
+    .contact2 section:nth-of-type(2) p {
+        font-size: 25px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    
+    .title_name img {
+        width: 40%;
+    }
+    
+    .nav_container {
+        display: none;
+    }
+    
+    .nav_btn_container {
+        display: block;
+    }
+    
+    .nav_btn {
+        top: 13px;
+        width: 40px;
+        height: 40px;
+        position: absolute;
+        left: 13px;
+        border-radius: 50%;
+    }
+
+    .nav_btn img {
+        width: 100%;
+    }
+
+    .nav_btn:active {
+
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .contain {
+        display: block;
+    }
+
+    .contact {
+        padding-bottom: 30px;
+        border-top: 1px solid;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .title_name img {
+        width: 60%;
+    }
+
+    .menu {
+        margin: 0 0 0 15px;
+    }
 }
