--- a/us_styles.css
+++ b/us_styles.css
@@ -69,3 +69,38 @@
 .porpose p {
     font-size: larger;
 }
+
+/* MQ */
+
+@media screen and (max-width: 1024px) {
+
+}
+
+@media screen and (max-width: 768px) {
+    .founder_container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .mv_container {
+        display: block;
+    }
+
+    .us_borders {
+        border: none;
+    }
+
+    .porpose p {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 480px) {
+
+}
+
+@media screen and (max-width: 320px) {
+
+}
