--- a/styles.css
+++ b/styles.css
@@ -170,7 +170,7 @@ li a {
     grid-column-start: 3;
 }
 
-.contact2 section {
+.contact2 div {
     justify-content: center;
     display: flex;
 }
@@ -182,14 +182,14 @@ li a {
     /* margin-left: 25px; */
     font-size: 35px;
 }
-.contact2 section:nth-of-type(2) p {
+.contact2 div:nth-of-type(2) p {
     font-size: 30px;
 }
-.contact2 section:nth-of-type(2) a {
+.contact2 div:nth-of-type(2) a {
     text-decoration: none;
     color: black;
 }
-.contact2 section:nth-of-type(2) a:hover {
+.contact2 div:nth-of-type(2) a:hover {
     text-decoration: underline;
 }
 .bt {
