--- a/styles.css
+++ b/styles.css
@@ -85,21 +85,28 @@ li a {
     box-shadow: 0px 0px 33px 1px rgba(0,0,0,0.69);
 }
 
+.packets {
+    display: grid;
+    grid-template: 1fr / 1fr 1fr 1fr;
+}
+
+.packets section {
+    text-align: center;
+    grid-column: 1/3;
+}
+
 .contain {
     display: grid;
-    grid-template: 1fr 1fr / 1fr 1fr 1fr 1fr;
+    grid-template: 1fr / repeat(3, 1fr);
     font-family: 'Work Sans', sans-serif;
+    margin: 0 50px 30px;
     
 }
 
-.menu {
-    grid-column-start: 2;
-    grid-column-end: 3;
-    grid-row-start: 1;
-    grid-row-end: 3;
+.menu_50 {
+    padding: 0 10px;
+    border-left: 1px solid black;
     border-right: 1px solid black;
-    margin: 25px 0;
-    margin-left: 50px;
 }
 
 .menu h1 {
@@ -110,7 +117,7 @@ li a {
     font-family: 'Noto Sans HK', sans-serif;
 }
 
-.contact {
+/* .contact {
     display: grid;
     grid-template: 1fr 1fr  / 1fr;
     grid-column-end: 4;
@@ -118,9 +125,9 @@ li a {
     text-align: center;
     margin: 0 25px;
     border-bottom: 1px solid black;
-} 
+}  */
 
-.name-field {
+/* .name-field {
     background-image: url(https://www.flaticon.com/svg/static/icons/svg/1250/1250253.svg);
     background-position: 3px 3px;
     background-repeat: no-repeat;
@@ -128,9 +135,9 @@ li a {
     background-color: white;
     height: 30px;
     background-size: 26px;
-}
+} */
 
-.mail-field {
+/* .mail-field {
     background-image: url(https://www.flaticon.com/svg/static/icons/svg/646/646176.svg);
     background-position: 3px 3px;
     background-repeat: no-repeat;
@@ -138,9 +145,9 @@ li a {
     background-color: white;
     height: 30px;
     background-size: 26px;
-}
+} */
 
-.phone-field {
+/* .phone-field {
     background-image: url(https://www.flaticon.com/svg/static/icons/svg/977/977258.svg);
     background-position: 3px 3px;
     background-repeat: no-repeat;
@@ -148,26 +155,27 @@ li a {
     background-color: white;
     height: 30px;
     background-size: 26px;
-}
+} */
 
-.contact section {
+/* .contact section {
     display: flex;
     justify-content: center;
     height: fit-content;
-}
-.contact h1 {
+} */
+
+/* .contact h1 {
     align-self: center;
     margin: 10px 0;
-}
+} */
 
-.contact input {
+/* .contact input {
     width: 60%;
-}
+} */
 
 .contact2 {
-    grid-column-end: 4;
-    grid-row-start: 2;
-    grid-column-start: 3;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .contact2_divs {
